Enforcing rendering limits and cache headers